Tiny fix, button too wide still.

--- a/WebContent/static/style.css
+++ b/WebContent/static/style.css
@@ -140,14 +140,15 @@ body {
 	display: inline-block;
     padding: 5px 10px;
     color: black;
-	background-color: rgb(100,150,200);
-    text-align: center;
-    text-decoration: none;
-    
 	border-radius: 2px;
    	border: 1px solid rgb(217,217,217);
   	border-top: 1px solid rgb(200,200,200);
 	background-image: -webkit-linear-gradient(top,rgb(250,250,250),rgb(230,230,230));
+	/*
+	background-color: rgb(100,150,200);
+	text-align: center;
+    text-decoration: none;
+    */
 }
 /*
 	outline: none;
